client/src/components/css/SuggestionGallery.css
#suggestion-gallery {
    display: flex;
    flex-direction: column;
}

#suggestion-gallery-line {
    border-bottom: 1px solid rgba(34, 36, 38, 0.15);
}

#suggestion-gallery-vertical {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-content: center;
    justify-content: space-around;
}

#suggestion-gallery-horizontal {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-content: center;
    justify-content: space-around;
}

